[tool.poetry]
name = "audio-processing"
version = "0.1.0"
description = "playing with audio processing and visualisation stuff"
authors = ["andy <andy@sarsoo.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
pandas = "^1.2.1"
jupyterlab = "^3.0.5"
matplotlib = "^3.3.3"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
